url for artist as well as view created and list of artists too

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,4 +1,4 @@
-<!-- {% load static %} -->
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -42,7 +42,7 @@
     <footer class="footer">
       <div class="content has-text-centered">
         <p class="brand-name-footer text-white">
-          <strong>MovScroll</strong> by <a href="https://github.com/DoloresCode">Dolores Crazover</a>.
+          <strong> ⓒ MovScroll</strong> coded by <a href="https://github.com/DoloresCode" target="_blank" rel="noopener">Dolores Crazover</a>.
         </p>
       </div>
     </footer>
