--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -5,15 +5,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"
     />
     <script
-    src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-    crossorigin="anonymous"
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="{% static 'styles/main.css' %}" />
     <script src="{% static 'scripts/main.js' %}" defer></script>
@@ -37,12 +40,21 @@
       <div class="navbar-menu navbar-start">
         <a class="navbar-item" href="/about">About</a>
       </div>
+      <div class="navbar-menu navbar-start">
+        <a class="navbar-item" href="/actors">Actors</a>
+      </div>
     </nav>
     <div class="container">{% block content %}{% endblock %}</div>
     <footer class="footer">
       <div class="content has-text-centered">
         <p class="brand-name-footer text-white">
-          <strong> ⓒ MovScroll</strong> coded by <a href="https://github.com/DoloresCode" target="_blank" rel="noopener">Dolores Crazover</a>.
+          <strong> ⓒ MovScroll</strong> coded by
+          <a
+            href="https://github.com/DoloresCode"
+            target="_blank"
+            rel="noopener"
+            >Dolores Crazover</a
+          >.
         </p>
       </div>
     </footer>
