--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -43,6 +43,9 @@
       <div class="navbar-menu navbar-start">
         <a class="navbar-item" href="/actors">Actors</a>
       </div>
+      <div class="navbar-menu navbar-end">
+        <a class="navbar-item" href="/movies">Movies</a>
+      </div>
     </nav>
     <div class="container">{% block content %}{% endblock %}</div>
     <footer class="footer">
