creation of the movie and watchlist models and connection to Django admin and migration of them done

--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -7,16 +7,15 @@
     MovScroll is a dynamic and interactive database of movies, designed to cater
     to film enthusiasts and casual viewers alike. Here, you can find detailed
     information on a wide array of movies, including their titles, release
-    dates, runtimes, genres, and more. This project was created with the aim of
+    years, runtimes, genres, and more. This project was created with the aim of
     making it easier to discover and explore the fascinating world of cinema.
   </p>
 </div>
 <div class="middle-section">
   <div class="contributor-section">
     <div class="left-side-image">
-      <img
-        class="image is-128x128"
-        src="/main_app/static/main_app/images/dolores_crazover_picture.png"
+        <img class="image is-128x128"
+        src="/static/main_app/images/Dolores_crazover.png"
         alt="Dolores Crazover"
       />
     </div>
