--- a/main_app/templates/movie_list.html
+++ b/main_app/templates/movie_list.html
@@ -4,10 +4,10 @@ SEO {% endcomment %} {% block title %}Movie List{% endblock %}
 {% block content %} 
 {% for movie in movies %}
 <div class="movie-image">
-  <img src="{{movie.image}}" alt="{{movie.title}}" />
+<img src="{{movie.img}}" alt="{{movie.title}}" />
 </div>
 <h1>{{movie.title}}</h1>
-<p>Release Year: {{movie.release_date}}</p>
+<p>Release Year: {{movie.release_year}}</p>
 <p>Runtime: {{movie.runtime}} minutes</p>
 <p>Genre: {{movie.genre}}</p>
 <p>Main Cast: {{movie.actors|join:", "}}</p>
