--- a/main_app/templates/actor_list.html
+++ b/main_app/templates/actor_list.html
@@ -1,5 +1,8 @@
-{% extends 'base.html' %} {% comment %} for head title tags and helping us with
-SEO {% endcomment %} {% block title %}Actors{% endblock %} {% block content %}
+{% extends 'base.html' %} 
+
+{% block title %}Actors{% endblock %} 
+
+{% block content %}
 
 <h1 class="title pt-5">{{header}}</h1>
 <form class="mb-5" method="get">
