--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,17 +1,27 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="{% static 'scripts/main.js' %}" defer></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      defer
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="{% static 'styles/main.css' %}" />
-    
+    <script src="{% static 'scripts/main.js' %}" defer></script>
+
     <title>MovScroll - {% block title %}{% endblock %}</title>
   </head>
   <body>
@@ -36,7 +46,9 @@
         <a class="navbar-item" href="/actors">Actors</a>
       </div>
       <div class="navbar-menu navbar-end">
-        <a class="navbar-item" href="{% url 'actor_create' %}">Create a new Actor</a>
+        <a class="navbar-item" href="{% url 'actor_create' %}"
+          >Create a new Actor</a
+        >
       </div>
       <div class="navbar-menu navbar-end">
         <a class="navbar-item" href="/movies">Movies</a>
@@ -58,4 +70,3 @@
     </footer>
   </body>
 </html>
-
