--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %} 
-{% block title %}About{% endblock %}
-{% block content%}
+{% block title %}About{% endblock %} 
+
+{% block content %}
 <div class="top-section">
   <h1 class="about-page-title">MovScroll</h1>
   <p>
@@ -11,10 +12,19 @@
     making it easier to discover and explore the fascinating world of cinema.
   </p>
 </div>
+<div class="container-btn-see-actors">
+  <a href="/actors" class="button-see-actors">See Actors </a>
+</div>
+
+<div class="container-btn-see-movies-about">
+  <a href="/movies" class="button-see-movies-about">See Movies </a>
+</div>
+
 <div class="middle-section">
   <div class="contributor-section">
     <div class="left-side-image">
-        <img class="image is-128x128"
+      <img
+        class="image is-128x128"
         src="/static/main_app/images/Dolores_crazover.png"
         alt="Dolores Crazover"
       />
@@ -23,20 +33,30 @@
       <h2 class="contributor-title">Contributor</h2>
       <p>
         This project was developed by <strong>Dolores Crazover</strong>, a
-        dedicated full-stack software developer and film aficionado. She
-        leverages a strong STEM, entrepreneurship, and community building
-        background to design customized, impactful solutions that strive to
-        drive innovation, optimize processes, and enhance lives. Dolores is a
-        problem-solver, detail-oriented, used to working with cross-functional
-        teams, and a “good-vibes seeker.” She utilizes skills in HTML5, CSS,
-        Javascript, Python, Node.js, Express.js, Mongoose and React to make a
-        real difference in the world. Dolores welcomes opportunities to discuss
-        software development, projects, or explore collaborations. Feel free to
-        contact her and create something impactful together! You can find more
-        of her work on her
-        <a href="https://github.com/DoloresCode">GitHub</a>
+        dedicated <strong>full-stack software developer</strong> and film
+        aficionado. She leverages a strong STEM, entrepreneurship, and community
+        building background to design customized, impactful solutions that
+        strive to drive innovation, optimize processes, and enhance lives.
+        Dolores is a problem-solver, detail-oriented, used to working with
+        cross-functional teams, and a “good-vibes seeker.” She utilizes skills
+        in
+        <strong
+          >HTML5, CSS, Javascript, Python, Node.js, Express.js, Mongoose and
+          React</strong
+        >
+        to make a real difference in the world.
+        <strong
+          >Dolores welcomes opportunities to discuss software development,
+          projects, or explore collaborations.</strong
+        >
+        Feel free to contact her and create something impactful together! You
+        can find more of her work on her
+        <a href="https://github.com/DoloresCode" target="_blank">GitHub</a>
         and
-        <a href="https://www.linkedin.com/in/dolores-crazover/">LinkedIn</a>.
+        <a href="https://www.linkedin.com/in/dolores-crazover/" target="_blank"
+          >LinkedIn</a
+        >
+        and <a href="mailto:dcrazover@gmail.com">send her an email.</a>
       </p>
     </div>
   </div>
@@ -47,7 +67,9 @@
     MovScroll serves as a go-to platform for movie lovers seeking to explore new
     films, revisit classics, or simply learn more about their favorite flicks.
     It's also a valuable tool for those interested in the film production
-    process, providing detailed information about actors and more.
+    process, providing detailed information about actors, creating your
+    watchlist, adding, updating or deleting actors to our list as well as doing
+    the same for movies and more.
   </p>
 </div>
 {% endblock %}
