--- a/main_app/templates/actor_detail.html
+++ b/main_app/templates/actor_detail.html
@@ -12,7 +12,9 @@
     <span>Verified</span>
   </div>
   {% endif %}
-  <h1 class="title">{{actor.name}}</h1>
+  <div class="actor-name">
+    <h1 class="title">{{actor.name}}</h1>
+  </div>
 </div>
 <div class="detail__container">
   <div class="buttons">
