--- a/main_app/templates/actor_delete_confirmation.html
+++ b/main_app/templates/actor_delete_confirmation.html
@@ -1,8 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <div class="delete-page-container">
   <div class="picture-delete-p">
-    <img class="image is-128x128"
-        src="/main_app/static/main_app/images/picture_delete_banner.jpeg"
+    <img class="image-delete-p" src="/static/main_app/images/picture_delete_banner.jpeg"
         alt="colorful waves-effect"
       />
   </div>
