--- a/main_app/templates/actor_delete_confirmation.html
+++ b/main_app/templates/actor_delete_confirmation.html
@@ -10,7 +10,7 @@
   </h1>
   <form method="post">
     {% csrf_token %}
-    <div class="buttons">
+    <div class="buttons-delete-pg">
       <!-- Confirm actor delete -->
       <input class="button is-danger custom-confirm-button" type="submit" value="Confirm" />
       <!-- Redirect back to detail on cancel -->
