creation route of watchlist and watchlist detail and their pages done

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -51,6 +51,11 @@
         >
       </div>
       <div class="navbar-menu navbar-end">
+        <a class="navbar-item" href="{% url 'watchlist_list' %}"
+          >Watchlists</a
+        >
+      </div>
+      <div class="navbar-menu navbar-end">
         <a class="navbar-item" href="/movies">Movies</a>
       </div>
     </nav>
