--- a/main_app/templates/actor_detail.html
+++ b/main_app/templates/actor_detail.html
@@ -54,6 +54,28 @@
       <span>{{forloop.counter}}</span>
       <span><b class="movie-t-detPag">{{movie.title}}</b></span>
       <span>{{movie.get_runtime}}</span>
+      <!-- each watchlist becomes a drop down item with the ids needed to add to the join table  -->
+      <span>
+        <div class="dropdown watchlist">
+            <div class="dropdown-trigger">
+                <button class="button" aria-haspopup="true" aria-controls="dropdown-menu">
+                    <span>Add to Watchlist</span>
+                    <span class="icon is-small">
+                        <i class="fas fa-angle-down" aria-hidden="true"></i>
+                    </span>
+                </button>
+            </div>
+            <div class="dropdown-menu" id="dropdown-menu" role="menu">
+                <div class="dropdown-content">
+                    {% for watchlist in watchlists %}
+                        <a href="{% url 'watchlist_movie_assoc' watchlist.pk movie.pk %}?assoc=add"
+                           class="dropdown-item">{{ watchlist.title }}</a>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+    </span>
+    <!-- Inside movie div -->
     </div>
 		{% empty %}
     <article class="message">
