--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -58,6 +58,9 @@
       <div class="navbar-menu navbar-end">
         <a class="navbar-item" href="/movies">Movies</a>
       </div>
+      <div class="navbar-menu navbar-end">
+        <a class="navbar-item" href="{% url 'movie_create_general' %}">Create New Movies</a>
+      </div>
     </nav>
     <div class="container">{% block content %}{% endblock %}</div>
     <footer class="footer">
