--- a/main_app/templates/movie_update.html
+++ b/main_app/templates/movie_update.html
@@ -57,4 +57,7 @@
       <button type="submit">Update Movie</button>
     </div>
   </form>
+  <div class="btn-back-movie-p">
+    <a href="{% url 'movie_list' %}">Go back</a>
+  </div>
 {% endblock %}
