movie delete route, view and page done

--- a/main_app/templates/actor_delete_confirmation.html
+++ b/main_app/templates/actor_delete_confirmation.html
@@ -1,4 +1,8 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'base.html' %} 
+
+{% block title %}Delete Actor{% endblock %} 
+
+{% block content %}
 <div class="delete-page-container">
   <div class="picture-delete-p">
     <img class="image-delete-p" src="/static/main_app/images/picture_delete_banner.jpeg"
