--- a/main_app/static/styles/main.css
+++ b/main_app/static/styles/main.css
@@ -35,63 +35,6 @@ p {
   font-size: 12px;
 }
 
-/* .detail__img {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 500px;
-  background-color: #ffffff;
-  overflow: hidden;
-}
-
-.detail__img::after {
-  content: "";
-  background-image: linear-gradient(transparent 60%, #1f1f1f);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 5;
-} */
-
-/* .detail__img {
-  position: flex;
-} */
-
-
-
-
-
-/* .detail__name {
-  position: absolute;
-  z-index: 5;
-  top: 400px;
-}
-
-.detail__container {
-  margin-top: 500px;
-} */
-/* 
-.detail__movies {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.movie {
-  width: 100%;
-  padding: 10px;
-  display: grid;
-  grid-template-columns: 0.1fr 3fr 1fr;
-  border-radius: 5px;
-}
-
-.movie:hover {
-  background-color: hsla(0, 0%, 100%, 0.1);
-  cursor: pointer;
-}  */
 
 /* Footer in base.html */
 
@@ -127,6 +70,14 @@ p {
 .control .button.is-success.custom-search-button {
   background-color: rgb(42, 166, 215);
 } 
+
+.button.is-info {
+  margin-top: 1rem;
+}
+
+.button.is-danger {
+margin-top: 1rem;
+}
 
 /* Create actor Page */
 
