--- a/main_app/templates/movie_list.html
+++ b/main_app/templates/movie_list.html
@@ -2,6 +2,8 @@
 SEO {% endcomment %} {% block title %}Movie List{% endblock %} 
 
 {% block content %} 
+
+<h1 class="title pt-5">Popular Movies</h1>
 {% for movie in movies %}
 <div class="movie-image">
 <img src="{{movie.img}}" alt="{{movie.title}}" />
@@ -13,8 +15,18 @@ SEO {% endcomment %} {% block title %}Movie List{% endblock %}
 <p>Main Casts: {% for actor in movie.actors.all %}{{ actor.name }}{% if not forloop.last %}, {% endif %}{% endfor %}</p>
 <p>Synopsis: {{movie.synopsis}}</p>
 
-<p><a href="{% url 'movie_update' movie.id %}" class="btn btn-primary">Update Movie</a></p>
-
+<div class="movie-actions">
+    <a href="{% url 'movie_update' movie.id %}" class="button is-info">
+      <span class="icon">
+        <i class="fas fa-edit"></i>
+      </span>
+    </a>
+    <a href="{% url 'movie_delete' movie.id %}" class="button is-danger">
+      <span class="icon">
+        <i class="fas fa-trash-alt"></i>
+      </span>
+    </a>
+  </div>
 
 <hr />
 {% empty %}
