--- a/main_app/templates/movie_list.html
+++ b/main_app/templates/movie_list.html
@@ -1,9 +1,14 @@
 {% extends 'base.html' %} {% comment %} for head title tags and helping us with
-SEO {% endcomment %} {% block title %}Movie List{% endblock %} 
+SEO {% endcomment %} 
+
+{% block title %}Movie List{% endblock %} 
 
 {% block content %} 
 
 <h1 class="title pt-5">Popular Movies</h1>
+
+<a href="{% url 'movie_create_general' %}" class="btn btn-primary">Create New Movie</a>
+
 {% for movie in movies %}
 <div class="movie-image">
 <img src="{{movie.img}}" alt="{{movie.title}}" />
